Introduce strict Rust linters
+ Enable strict linters for Clippy and Check.
+ Apply automatic Clippy fixes.
+ Change how the is_image function behaves to be more idiomatic.
+ Introduce rust-toolchain and rustfmt config files.
+ Move all dependencies to the workspace level.

Note: The cargo clippy now complains about usage of `unwrap` in non-test code. To fix that, actual code changes are required.

Note: Some linters related to cargo packages' metadata and documentation are still disabled to avoid noisy Clippy output. These are required to ensure high documentation standards and should be enabled eventually once the public interfaces are correctly documented.

Signed-off-by: Nik Konyuchenko <nkonyuchenko@nvidia.com>

--- a/workspace-tests/Cargo.toml
+++ b/workspace-tests/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "model-express-workspace-tests"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 model_express_client = { path = "../model_express_client" }
@@ -9,7 +9,7 @@ model_express_common = { path = "../model_express_common" }
 model_express_server = { path = "../model_express_server" }
 tokio = { workspace = true }
 serde_json = { workspace = true }
-tempfile = "3.8"
+tempfile = { workspace = true }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
@@ -18,3 +18,7 @@ tokio-test = "0.4"
 [[bench]]
 name = "performance"
 harness = false
+
+
+[lints]
+workspace = true
