--- a/model_express_server/Cargo.toml
+++ b/model_express_server/Cargo.toml
@@ -1,27 +1,30 @@
 [package]
 name = "model_express_server"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 model_express_common = { path = "../model_express_common" }
-tokio = { workspace = true }
+anyhow = { workspace = true }
+async-trait = { workspace = true }
+chrono = { workspace = true }
+futures = { workspace = true }
+hf-hub = { workspace = true }
+once_cell = { workspace = true }
+prost = { workspace = true }
+rusqlite = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+tokio = { workspace = true }
+tokio-stream = { workspace = true }
+tonic = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-tonic = { workspace = true }
-prost = { workspace = true }
-tokio-stream = "0.1"
-async-trait = "0.1"
-hf-hub = { version = "0.4.2", default-features = false, features = ["tokio", "rustls-tls"] }
-once_cell = "1.21.3"
-futures = "0.3.31"
-anyhow = "1.0.98"
-rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
-chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 tempfile = "3.8"
 tokio-test = "0.4"
 tonic-build = { workspace = true }
+
+[lints]
+workspace = true
