--- a/model_express_client/Cargo.toml
+++ b/model_express_client/Cargo.toml
@@ -3,11 +3,16 @@ name = "model_express_client"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "cache_cli"
+path = "src/bin/cache_cli.rs"
+
 [dependencies]
 model_express_common = { path = "../model_express_common" }
 tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_yaml = "0.9"
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tonic = { workspace = true }
@@ -15,10 +20,13 @@ prost = { workspace = true }
 futures = { workspace = true }
 uuid = { workspace = true }
 thiserror = { workspace = true }
+anyhow = "1.0"
+clap = { version = "4.0", features = ["derive"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
 tonic-build = { workspace = true }
+tempfile = "3.8"
 
 [lints]
 workspace = true
