--- a/model_express_client/Cargo.toml
+++ b/model_express_client/Cargo.toml
@@ -9,6 +9,7 @@ tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 tonic = { workspace = true }
 prost = { workspace = true }
 futures = { workspace = true }
