--- a/workspace-tests/Cargo.toml
+++ b/workspace-tests/Cargo.toml
@@ -10,6 +10,8 @@ model_express_server = { path = "../model_express_server" }
 tokio = { workspace = true }
 serde_json = { workspace = true }
 tempfile = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
