--- a/model_express_common/Cargo.toml
+++ b/model_express_common/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_yaml = "0.9"
 thiserror = "2.0"
 tonic = { workspace = true }
 prost = { workspace = true }
