fix: properly using gRPC port When I migrated my initial HTTP proof of concept to using gRPC, I didn't fully tie together the port mapping as I should've. This fixes this oversight.

--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -33,14 +33,12 @@ spec:
             cpu: "200m"
             memory: "128Mi"
         livenessProbe:
-          httpGet:
-            path: /health
+          tcpSocket:
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 10
         readinessProbe:
-          httpGet:
-            path: /health
+          tcpSocket:
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 10
