--- a/model_express_client/Cargo.toml
+++ b/model_express_client/Cargo.toml
@@ -3,10 +3,6 @@ name = "model_express_client"
 version = "0.1.0"
 edition = "2024"
 
-[[bin]]
-name = "cache_cli"
-path = "src/bin/cache_cli.rs"
-
 [dependencies]
 model_express_common = { path = "../model_express_common" }
 tokio = { workspace = true }
@@ -20,7 +16,8 @@ futures = { workspace = true }
 uuid = { workspace = true }
 thiserror = { workspace = true }
 anyhow = "1.0"
-clap = { version = "4.5.32", features = ["derive"] }
+clap = { version = "4.5", features = ["derive", "env"] }
+colored = "2.1"
 
 [dev-dependencies]
 tokio-test = "0.4"
@@ -29,3 +26,7 @@ tempfile = "3.8"
 
 [lints]
 workspace = true
+
+[[bin]]
+name = "model-express-cli"
+path = "src/bin/cli.rs"
