--- a/model_express_client/Cargo.toml
+++ b/model_express_client/Cargo.toml
@@ -15,10 +15,18 @@ prost = { workspace = true }
 futures = { workspace = true }
 uuid = { workspace = true }
 thiserror = { workspace = true }
+anyhow = "1.0"
+clap = { version = "4.5", features = ["derive", "env"] }
+colored = "2.1"
 
 [dev-dependencies]
 tokio-test = "0.4"
 tonic-build = { workspace = true }
+tempfile = "3.8"
 
 [lints]
 workspace = true
+
+[[bin]]
+name = "model-express-cli"
+path = "src/bin/cli.rs"
