Adding layered configuration system.
This overhauls the configuration mechanism of ModelExpress. Also prepares configuration variables for the upcoming cache cleanup mechanism.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   model-express-server:
@@ -8,6 +8,6 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - SERVER_PORT=8000
-      - LOG_LEVEL=info
+      - MODEL_EXPRESS_SERVER_PORT=8000
+      - MODEL_EXPRESS_LOG_LEVEL=info
     restart: unless-stopped
