--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -25,8 +25,6 @@ spec:
           value: "8000"
         - name: LOG_LEVEL
           value: "info"
-        - name: HF_HUB_CACHE
-          value: "/cache/models"
         resources:
           limits:
             cpu: "500m"
@@ -36,10 +34,7 @@ spec:
             memory: "128Mi"
         volumeMounts:
         - name: model-cache
-          mountPath: /cache
-        - name: model-db
-          mountPath: /app/models.db
-          subPath: models.db
+          mountPath: /root
         livenessProbe:
           tcpSocket:
             port: 8000
@@ -53,34 +48,7 @@ spec:
       volumes:
       - name: model-cache
         persistentVolumeClaim:
-          claimName: model-cache-pvc
-      - name: model-db
-        persistentVolumeClaim:
-          claimName: model-db-pvc
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: model-cache-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
-  storageClassName: standard
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: model-db-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
-  storageClassName: standard
+          claimName: nnoble-pvc
 ---
 apiVersion: v1
 kind: Service
