--- a/model_express_server/Cargo.toml
+++ b/model_express_server/Cargo.toml
@@ -8,8 +8,8 @@ model_express_common = { path = "../model_express_common" }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
-clap = { version = "4.5", features = ["derive", "env"] }
-config = { version = "0.15", features = ["yaml", "toml", "json"] }
+clap = { workspace = true }
+config = { workspace = true }
 futures = { workspace = true }
 hf-hub = { workspace = true }
 once_cell = { workspace = true }
