--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 resolver = "3"
 
 [workspace.dependencies]
-anyhow = "1.0.98"
+anyhow = { version = "1.0.98", features = ["backtrace"] }
 async-trait = "0.1"
 axum = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
