--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ hf-hub = { version = "0.4.3", default-features = false, features = [
     "tokio",
     "rustls-tls",
 ] }
+jiff = { version = "0.2.15", features = ["serde"] }
 once_cell = "1.21.3"
 prost = "0.13"
 rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
