--- a/model_express_client/Cargo.toml
+++ b/model_express_client/Cargo.toml
@@ -15,14 +15,14 @@ prost = { workspace = true }
 futures = { workspace = true }
 uuid = { workspace = true }
 thiserror = { workspace = true }
-anyhow = "1.0"
-clap = { version = "4.5", features = ["derive", "env"] }
-colored = "2.1"
+anyhow = { workspace = true }
+clap = { workspace = true }
+colored = { workspace = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
 tonic-build = { workspace = true }
-tempfile = "3.8"
+tempfile = "3.20"
 
 [lints]
 workspace = true
