add if condition

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -249,6 +249,7 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     needs: [test, integration-test, security-audit, docker-build]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
     - name: Checkout repository
