--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,14 +117,6 @@ jobs:
         ./target/release/model_express_server &
         echo $! > server.pid
         sleep 5  # Give server time to start
-
-    - name: Run integration tests
-      run: cargo test --test integration_tests -- --ignored
-      continue-on-error: true  # Integration tests may fail in CI due to network restrictions
-
-    - name: Stop server
-      if: always()
-      run: |
         if [ -f server.pid ]; then
           kill $(cat server.pid) || true
           rm server.pid
@@ -136,6 +128,14 @@ jobs:
         if [ -f run_integration_tests.sh ]; then
           chmod +x run_integration_tests.sh
           ./run_integration_tests.sh || echo "Integration test script failed (expected in CI)"
+        fi
+
+    - name: Stop server
+      if: always()
+      run: |
+        if [ -f server.pid ]; then
+          kill $(cat server.pid) || true
+          rm server.pid
         fi
 
   security-audit:
