--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 resolver = "3"
 
 [workspace.dependencies]
-anyhow = "1.0.98"
+anyhow = { version = "1.0.98", features = ["backtrace"] }
 async-trait = "0.1"
 axum = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
@@ -19,6 +19,7 @@ hf-hub = { version = "0.4.3", default-features = false, features = [
     "tokio",
     "rustls-tls",
 ] }
+jiff = { version = "0.2.15", features = ["serde"] }
 once_cell = "1.21.3"
 prost = "0.13"
 rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
