Another proposal for our endpoint configuration issue.
Basically, instead of having a workaround with a second constructor,
we refactor the configuration system of the client to be layered like
the server, and the endpoint should propagate better.

--- a/model_express_common/Cargo.toml
+++ b/model_express_common/Cargo.toml
@@ -15,6 +15,10 @@ tracing = { workspace = true }
 hf-hub = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
+chrono = { workspace = true }
+clap = { workspace = true }
+config = { workspace = true }
+jiff = { workspace = true }
 
 [dev-dependencies]
 mockall = "0.13"
