--- a/.github/workflows/trigger_ci.yml
+++ b/.github/workflows/trigger_ci.yml
@@ -10,6 +10,7 @@ on:
       - main
       - 'release/*.*.*'
 
+# Cancel any previous check runs for the same pull request to avoid redundant workflows.
 concurrency:
   group: ${{ github.event_name == 'pull_request' && format('{0}-{1}', github.workflow, github.event.pull_request.number) || '' }}
   cancel-in-progress: true
