Update ref to trigger pipeline
Signed-off-by: Pavithra Vijayakrishnan <160681768+pvijayakrish@users.noreply.github.com>

--- a/.github/workflows/trigger_ci.yml
+++ b/.github/workflows/trigger_ci.yml
@@ -19,7 +19,7 @@ jobs:
   trigger:
     uses: ai-dynamo/.github/.github/workflows/mirror_and_trigger_ci.yml@pvijayakrish/add-centralized-workflows
     with:
-      ref: ${{ github.ref_name }}
+      ref: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref_name }}
     secrets:
       TOKEN: ${{ secrets.TOKEN }}
       MIRROR_URL: ${{ secrets.MIRROR_URL }}
