add required fields in manifest

--- a/model_express_client/Cargo.toml
+++ b/model_express_client/Cargo.toml
@@ -2,6 +2,9 @@
 name = "model_express_client"
 version = "0.1.0"
 edition = "2024"
+license = "Apache-2.0"
+description = "Client library for Model Express gRPC server"
+repository = "https://github.com/ai-dynamo/modelexpress"
 
 [dependencies]
 model_express_common = { path = "../model_express_common" }
