--- a/model_express_common/Cargo.toml
+++ b/model_express_common/Cargo.toml
@@ -2,6 +2,9 @@
 name = "model_express_common"
 version = "0.1.0"
 edition = "2024"
+license = "Apache-2.0"
+description = "Shared utilities for Model Express client and server"
+repository = "https://github.com/ai-dynamo/modelexpress"
 
 [dependencies]
 serde = { workspace = true }
