--- a/model_express_common/Cargo.toml
+++ b/model_express_common/Cargo.toml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+
 [package]
 name = "model_express_common"
 version = "0.1.0"
