--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+
 max_width = 100
 hard_tabs = false
 tab_spaces = 4
