--- a/workspace-tests/Cargo.toml
+++ b/workspace-tests/Cargo.toml
@@ -2,6 +2,9 @@
 name = "model-express-workspace-tests"
 version = "0.1.0"
 edition = "2024"
+license = "Apache-2.0"
+description = "Tests for Model Express workspace"
+publish = false
 
 [dependencies]
 model_express_client = { path = "../model_express_client" }
