fix: Add new port and logging env variables for MX K8s deployment

--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -24,9 +24,9 @@ spec:
         ports:
         - containerPort: 8000
         env:
-        - name: SERVER_PORT
+        - name: MODEL_EXPRESS_SERVER_PORT
           value: "8000"
-        - name: LOG_LEVEL
+        - name: MODEL_EXPRESS_LOGGING_LEVEL
           value: "info"
         resources:
           limits:
