--- a/model_express_server/Cargo.toml
+++ b/model_express_server/Cargo.toml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [package]
-name = "model_express_server"
+name = "modelexpress-server"
 version = "0.1.0"
 edition = "2024"
 license = "Apache-2.0"
@@ -10,7 +10,7 @@ description = "High-performance gRPC server for model serving and management"
 repository = "https://github.com/ai-dynamo/modelexpress"
 
 [dependencies]
-model_express_common = { path = "../model_express_common" }
+modelexpress-common = "0.1.0"
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
