--- a/workspace-tests/Cargo.toml
+++ b/workspace-tests/Cargo.toml
@@ -10,9 +10,9 @@ description = "Tests for Model Express workspace"
 publish = false
 
 [dependencies]
-modelexpress-client = "0.1.0"
-modelexpress-common = "0.1.0"
-modelexpress-server = "0.1.0"
+modelexpress-client = { path = "../model_express_client", version = "0.1.0" }
+modelexpress-common = { path = "../model_express_common", version = "0.1.0" }
+modelexpress-server = { path = "../model_express_server", version = "0.1.0" }
 tokio = { workspace = true }
 serde_json = { workspace = true }
 tempfile = { workspace = true }
