--- a/modelexpress_server/Cargo.toml
+++ b/modelexpress_server/Cargo.toml
@@ -10,7 +10,7 @@ description = "High-performance gRPC server for model serving and management"
 repository = "https://github.com/ai-dynamo/modelexpress"
 
 [dependencies]
-modelexpress-common = { version = "0.1.0", path = "../model_express_common" }
+modelexpress-common = { version = "0.1.0", path = "../modelexpress_common" }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
