--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "model-express.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.replicaCount | default 1 }}
   selector:
     matchLabels:
       {{- include "model-express.selectorLabels" . | nindent 6 }}
@@ -36,8 +36,10 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          {{- if .Values.image }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.image.pullPolicy | default "IfNotPresent" }}
+          {{- end }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
