--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
           {{- end }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: {{ .Values.service.port | default 8001 }}
               protocol: TCP
           {{- if .Values.env }}
           env:
@@ -62,43 +62,43 @@ spec:
           args:
             {{- toYaml .Values.args | nindent 12 }}
           {{- end }}
-          {{- if .Values.probes.liveness.enabled }}
+          {{- if and .Values.probes .Values.probes.liveness .Values.probes.liveness.enabled }}
           livenessProbe:
             {{- if .Values.probes.liveness.tcpSocket }}
             tcpSocket:
               {{- toYaml .Values.probes.liveness.tcpSocket | nindent 14 }}
             {{- end }}
-            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
-            periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
-            timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
-            failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
+            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds | default 5 }}
+            periodSeconds: {{ .Values.probes.liveness.periodSeconds | default 10 }}
+            timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds | default 5 }}
+            failureThreshold: {{ .Values.probes.liveness.failureThreshold | default 3 }}
           {{- end }}
-          {{- if .Values.probes.readiness.enabled }}
+          {{- if and .Values.probes .Values.probes.readiness .Values.probes.readiness.enabled }}
           readinessProbe:
             {{- if .Values.probes.readiness.tcpSocket }}
             tcpSocket:
               {{- toYaml .Values.probes.readiness.tcpSocket | nindent 14 }}
             {{- end }}
-            initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }}
-            periodSeconds: {{ .Values.probes.readiness.periodSeconds }}
-            timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }}
-            failureThreshold: {{ .Values.probes.readiness.failureThreshold }}
+            initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds | default 5 }}
+            periodSeconds: {{ .Values.probes.readiness.periodSeconds | default 10 }}
+            timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds | default 5 }}
+            failureThreshold: {{ .Values.probes.readiness.failureThreshold | default 3 }}
           {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if or .Values.persistence.enabled .Values.extraVolumeMounts }}
+          {{- if or (and .Values.persistence .Values.persistence.enabled) .Values.extraVolumeMounts }}
           volumeMounts:
-            {{- if .Values.persistence.enabled }}
+            {{- if and .Values.persistence .Values.persistence.enabled }}
             - name: model-cache
-              mountPath: {{ .Values.persistence.mountPath }}
+              mountPath: {{ .Values.persistence.mountPath | default "/root" }}
             {{- end }}
             {{- if .Values.extraVolumeMounts }}
             {{- toYaml .Values.extraVolumeMounts | nindent 12 }}
             {{- end }}
           {{- end }}
-            {{- if or .Values.persistence.enabled .Values.extraVolumes }}
+            {{- if or (and .Values.persistence .Values.persistence.enabled) .Values.extraVolumes }}
       volumes:
-        {{- if .Values.persistence.enabled }}
+        {{- if and .Values.persistence .Values.persistence.enabled }}
         - name: model-cache
           persistentVolumeClaim:
             claimName: {{ include "model-express.fullname" . }}-pvc
