--- a/helm/templates/tests/test-connection.yaml
+++ b/helm/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
   - name: wget
     image: busybox
     command: ['wget']
-    args: ['{{ include "model-express.fullname" . }}:{{ .Values.service.port }}']
+    args: ['{{ include "model-express.fullname" . }}:{{ .Values.service.port | default 8001 }}']
   restartPolicy: Never
