--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -5,9 +5,9 @@ metadata:
   name: {{ include "model-express.serviceAccountName" . }}
   labels:
     {{- include "model-express.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+  {{- if and .Values.serviceAccount .Values.serviceAccount.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
+    {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
   {{- end }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automount | default true }}
 {{- end }}
