--- a/helm/values-production.yaml
+++ b/helm/values-production.yaml
@@ -15,6 +15,8 @@ podAnnotations:
   prometheus.io/scrape: "true"
   prometheus.io/port: "8001"
 
+podLabels: {}
+
 service:
   type: ClusterIP
   port: 8001
